<resources>
    <string name="app_name">NFC 키오스크</string>
    <string name="id">아이디</string>
    <string name="password">패스워드</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in_or_order">로그인 또는 주문하기</string>
    <string name="order">주문하기</string>
    <string name="complete">완료</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up_information">가입 정보</string>
    <string name="write_nfc_tag">NFC 태그 등록</string>
    <string name="tag">TAG</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="table_management">좌석 관리</string>
    <string name="sales_management">매출 관리</string>
    <string name="menu_management">메뉴 관리</string>
    <string name="complete_payment">결제 완료</string>
    <string name="order_contents">주문 내용</string>
    <string name="total">Total</string>
    <string name="add_menu">메뉴 추가하기</string>
    <string name="menu_name">메뉴명</string>
    <string name="price">가격</string>
    <string name="menu_count">%d개</string>
    <string name="no_request_message">요청사항 없음</string>
    <string name="please_touch_tag">%d번 테이블의 NFC 태그를 갖다대주세요</string>
    <string name="table_order_contents">%d번 테이블 주문내용</string>
    <string name="daily_sales">일매출</string>
    <string name="monthly_sales">월매출</string>
    <string name="total_sales_format">%s 원</string>
    <string name="monthly_sales_format">%d월 누적 매출</string>
    <string name="daily_sales_format">%d월 %d일 누적 매출</string>
    <string name="table_number_format">No.%d</string>
    <string name="count_tag_activated">%d개 태그 활성화 됨</string>
    <string name="table_number">테이블 수</string>
    <string name="please_touch_nfc_tag">NFC 태그를 터치해주세요</string>
    <string name="table_activated_format">%d번 테이블이 활성화되었습니다</string>
    <string name="table_number_format_2">%d번 테이블</string>
    <string name="new_order">새로운 주문</string>
    <string name="request_message">요청사항</string>
</resources>