<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stormcloud"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".ui.auth.signup.SignUpFragment">

    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_id"
        app:layout_constraintStart_toStartOf="@+id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_id" />

    <EditText
        android:id="@+id/edit_text_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="@id/edit_text_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

    <Button
        android:id="@+id/button_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/weldonBlue"
        android:text="@string/tag"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/text_view_complete_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/weldonBlue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/complete"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_number_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/button_tag"
        app:layout_constraintStart_toEndOf="@id/button_tag"
        app:layout_constraintTop_toTopOf="@id/button_tag"
        tools:text="32개 태그 등록됨" />

    <TextView
        android:id="@id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/write_nfc_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>