<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".ui.auth.signin.SignInFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/weldonBlue"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:elevation="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        app:layout_constraintBottom_toTopOf="@+id/text_view_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_id"
            app:layout_constraintStart_toStartOf="@+id/edit_text_id"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_id" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="-2dp"
            android:backgroundTint="@color/sunsetOrange"
            android:text="@string/order"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_text_id"
            app:layout_constraintTop_toTopOf="@+id/edit_text_id" />

        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintEnd_toStartOf="@+id/button_order"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/weldonBlue"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-16dp"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        android:src="@drawable/kiosk"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>